# PagingSimulator

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  Doxyfile  PagingSimulator.puml  Simulation.cpp  Simulation.h  main.cpp
core/: CoreStructs.h  MemoryAccessEvent.cpp  MemoryAccessEvent.h
des/: Des.h
resources/: trace.txt
src/: Simulation.cpp  Simulation.h  TraceLoader.cpp  TraceLoader.h
src/core/: CoreStructs.h  DummyPagingAlgorithm.h  MemoryAccessEvent.cpp  MemoryAccessEvent.h  PagingAlgorithm.h
src/core/Algorithms/: DummyPagingAlgorithm.h  FIFOAlgorithm.cpp  FIFOAlgorithm.h  LRUAlgorithm.cpp  LRUAlgorithm.h  NFUAlgorithm.cpp  NFUAlgorithm.h  NFUNoAgingAlgorithm.cpp  NFUNoAgingAlgorithm.h  NRUAlgorithm.cpp  NRUAlgorithm.h  SecondChanceAlgorithm.cpp  SecondChanceAlgorithm.h
src/des/: Des.h  Event.cpp  Event.h  EventQueue.cpp  EventQueue.h
test/: DesTest.h  HandleMemoryAccessTest.h
